Implement gradient rendering for rank decoration glyphs
- Added `GradientGlyphs` class to handle the rendering of rank decoration glyphs with gradients applied.
- Created a mixin `GuiGlyphMixin` to intercept glyph rendering and apply gradient wrapping.
- Updated `RankGradientAnimationTest` to include new tests for gradient behavior and speed settings.
- Enhanced `WynncraftTextShaderColorTest` with additional tests for blend detection across shader markers.
- Introduced `GradientGlyphsTest` to validate the correct application of gradients on glyphs and ensure proper rendering behavior.